--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,5 +10,11 @@ phases:
       - echo Entered the install phase...
       - apt-get update -y
       - apt-get install -y nano
+    post_build:
+    commands:
+      - printf '[{"name":"confe-app","imageUri":"%s"}]' $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
+
+artifacts:
+    files: imagedefinitions.json
     finally:
       - echo This always runs even if the update or install command fails 
