--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,20 +1,25 @@
 version: 0.2
 
-env:
-  variables:
-    JAVA_HOME: "/usr/lib/jvm/java-8-openjdk-amd64"
-
 phases:
-  install:
+  pre_build:
     commands:
-      - echo Entered the install phase...
-      - apt-get update -y
-      - apt-get install -y nano
-    post_build:
+      - echo -n "$CODEBUILD_BUILD_ID" | sed "s/.*:\([[:xdigit:]]\{7\}\).*/\1/" > /tmp/build_id.out
+      - printf "%s:%s" "$REPOSITORY_URI" "$(cat /tmp/build_id.out)" > /tmp/build_tag.out
+      - ##printf '{"tag":"%s"}' "$(cat /tmp/build_id.out)" > imagedefinitions.json
+      - printf '[{"name":"dogs","imageUri":"%s"}]' "$(cat /tmp/build_tag.out)" > imagedefinitions.json
+      - echo Logging in to Amazon ECR...
+      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+  build:
     commands:
-      - printf '[{"name":"confeapp","imageUri":"%s"}]' $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
-
+      - echo Build started on `date`
+      - echo Building the Docker image...
+      - docker build --build-arg AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION --build-arg AWS_CONTAINER_CREDENTIALS_RELATIVE_URI=$AWS_CONTAINER_CREDENTIALS_RELATIVE_URI -t "$(cat /tmp/build_tag.out)" .
+  post_build:
+    commands:
+      - echo Build completed on `date`
+      - echo Pushing the Docker image...
+      - docker push "$(cat /tmp/build_tag.out)"
 artifacts:
-    files: imagedefinitions.json
-    finally:
-      - echo This always runs even if the update or install command fails 
+  files:
+    - imagedefinitions.json
+discard-paths: yes
