--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,12 +13,12 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build --build-arg AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION --build-arg AWS_CONTAINER_CREDENTIALS_RELATIVE_URI=$AWS_CONTAINER_CREDENTIALS_RELATIVE_URI -t "$(cat /tmp/build_tag.out)" .
+      - docker build -t 810157741463.dkr.ecr.us-east-1.amazonaws.com/php-mysql-confe:latest .
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push "$(cat /tmp/build_tag.out)"
+      - docker push 810157741463.dkr.ecr.us-east-1.amazonaws.com/php-mysql-confe:latest
 artifacts:
   files:
     - imagedefinitions.json
