--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,8 @@ phases:
       - apt-get install -y nano
     post_build:
     commands:
-      - printf '[{"name":"confeapp","imageUri":"%s"}]' $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
+      - printf '[{"name":"confeapp","imageUri":"%s"}]' 810157741463.dkr.ecr.us-east-1.amazonaws.com/php-mysql-confe:latest > imagedefinitions.json
+      - cat imagedefinitions.json
 
 artifacts:
     files: imagedefinitions.json
