--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,8 +10,18 @@ phases:
       - echo Entered the install phase...
       - apt-get update -y
       - apt-get install -y nano
+      - echo Logging in to Amazon ECR...
+      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+    build:
+    commands:
+      - echo Build started on `date`
+      - echo Building the Docker image...
+      - docker build -t 810157741463.dkr.ecr.us-east-1.amazonaws.com/php-mysql-confe:latest .
     post_build:
     commands:
+      - echo Build completed on `date`
+      - echo Pushing the Docker image...
+      - docker push 810157741463.dkr.ecr.us-east-1.amazonaws.com/php-mysql-confe:latest
       - printf '[{"name":"confeapp","imageUri":"%s"}]' 810157741463.dkr.ecr.us-east-1.amazonaws.com/php-mysql-confe:latest > imagedefinitions.json
       - cat imagedefinitions.json
 
@@ -19,3 +29,4 @@ artifacts:
     files: imagedefinitions.json
     finally:
       - echo This always runs even if the update or install command fails 
+
