--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push 810157741463.dkr.ecr.us-east-1.amazonaws.com/php-mysql-confe:latest
-      - printf '[{"name":"confeapp","imageUri":"%s"}]' 810157741463.dkr.ecr.us-east-1.amazonaws.com/php-mysql-confe:latest > imagedefinitions.json
+      - printf '[{"name":"confeapp","imageUri":"%s"}]' 862400819811.dkr.ecr.us-east-1.amazonaws.com/php-mysql:latest > imagedefinitions.json
       - cat imagedefinitions.json
 
 artifacts:
