--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    JAVA_HOME: "/usr/lib/jvm/java-8-openjdk-amd64"
+  VERSION: `date`
 
 phases:
   install:
@@ -14,13 +14,13 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build -t 862400819811.dkr.ecr.us-east-1.amazonaws.com/php-mysql:latest .
+      - docker build -t 862400819811.dkr.ecr.us-east-1.amazonaws.com/php-mysql:$VERSION .
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push 862400819811.dkr.ecr.us-east-1.amazonaws.com/php-mysql:latest
-      - printf '[{"name":"confeapp","imageUri":"%s"}]' 862400819811.dkr.ecr.us-east-1.amazonaws.com/php-mysql:latest > imagedefinitions.json
+      - docker push 862400819811.dkr.ecr.us-east-1.amazonaws.com/php-mysql:$VERSION
+      - printf '[{"name":"confeapp","imageUri":"%s"}]' 862400819811.dkr.ecr.us-east-1.amazonaws.com/php-mysql:$VERSION > imagedefinitions.json
       - cat imagedefinitions.json
 
 artifacts:
